--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -334,53 +334,53 @@
 3. 上着（锁）（A1）
 4. 上着锁。
 5. 请先走把。
-6. 弄错（V2）（**1次**）
+6. 弄错（V2）（**0次**）
 7. 遗失物品
 8. 刚发车的电车。
-9. 这样大小的（**1次**）
-10. 外侧（**1次**）
+9. 这样大小的（**0次**）
+10. 外侧（**2次**）
 11. 带有（V1）
 12. 带有口袋。
 13. 哪边
-14. 不记得了。（**1次**）
-15. 行李架（网做的）（**1次**）
+14. 不记得了。（**0次**）
+15. 行李架（网做的）（**0次**）
 16. 似乎是、大概是（AD）
-17. 新宿（**1次**）
+17. 新宿（**2次**）
 18. 开着（V1）
 19. 门开着。
 20. 停了、停着（V1）
 21. 车停着。
 22. 玻璃 glass
-23. 碎了（V2）（**1次**）
+23. 碎了（V2）（**0次**）
 24. 杯子碎了。
 25. 袋子
 26. 破了（V2）
 27. 纸破了。
-28. 折断（V2）（**1次**）
+28. 折断（V2）（**0次**）
 29. 树枝折断了。
-30. 《源氏物语》（**1次**）
-31. 落下（V1）（**1次**）
+30. 《源氏物语》（**0次**）
+31. 落下（V1）（**0次**）
 32. 坏了（V2）
 33. 椅子坏了。
-34. 盘子、碟子（**1次**）
+34. 盘子、碟子（**0次**）
 35. 饭碗、茶碗
 36. 树枝
 37. 开着（V1）
 38. 灯开着。
-39. 脏了（V2）（**1次**）
+39. 脏了（V2）（**0次**）
 40. 衣服脏了。
 41. 擦（V1）
-42. 更换（V2）（**1次**）
-43. 杯子（荷kop）（**1次**）
+42. 更换（V2）（**0次**）
+43. 杯子（荷kop）（**0次**）
 44. 演讲 speech
 45. 收拾（V2）
 46. 回信
-47. 掉了（V2）（**1次**）
+47. 掉了（V2）（**0次**）
 48. 纽扣掉了。
 49. 派出所
-50. 文件、材料（**1次**）
+50. 文件、材料（**0次**）
 51. 站务员
-52. 关着（V2）（**1次**）
+52. 关着（V2）（**0次**）
 53. 灯关着。
 54. 地震
 55. 墙壁
@@ -398,52 +398,51 @@
 2. 抽屉
 3. 收拾整理（V1）
 4. 以前、过去、原来
-5. 原处
-6. 返还、还原
-7. 原来的状态
-8. 保持原状（V3）
-9. 还（AD）
+5. 原处（**1次**）
+6. 返还、还原（V1）
+8. 保持原状（V3）（**1次**）
+9. 还（AD）（**1次**）
 10. 还在使用。
 11. 应急备用包
-12. 帆布背包
+12. 帆布背包（**1次**）
 13. 非常时
-14. 生活（V3）
-15. 手电
-16. ~ 啦、~ 啦
-17. 预定
+14. 生活（V3）（**1次**）
+15. 手电（**1次**）
+16. ~ 啦、~ 啦（**1次**）
+17. 预定（**1次**）
 18. 挂（V2）
-19. 把画挂在墙壁上。
-20. 排列（V2）
+19. 把画挂在墙壁上。（**1次**）
+20. 排列（V2）（**1次**）
 21. 角落
-22. 计划表
+22. 计划表（**1次**）
 23. 决定（V2）
 24. 决定名字。
 25. 偶人
-26. 装饰（V1）
+26. 装饰（V1）（**1次**）
 27. 镜子
 28. 花瓶
-29. 正中间
+29. 正中间（**1次**）
 30. 种植（V2）
 31. 植树。
-32. 周围
+32. 周围（**1次**）
 33. 课程、课
-34. 预习（V3）
+34. 预习（V3）（**1次**）
 35. 复习（V3）
-36. 讲义、上课
+36. 讲义、上课（**1次**）
 37. 收拾（行李）、完成（报告）（V2）
 38. 通知
 39. 走廊
-40. 玄关
+40. 玄关（**1次**）
 41. 圆的（A1）
-42. 做梦（V2）
+42. 做梦（V2）（**1次**）
 43. 高兴（A1）
-44. 讨厌（A2）
-45. 于是
-46. 醒来（V2）
-47. 睁眼（V2）
+44. 讨厌（A2）（**1次**）
+45. 于是（**1次**）
+46. 醒来（V2）（**1次**）
+47. 睁眼（V2）（**1次**）
 48. 池塘、水池
 49. 月历 calendar
-50. 入门书 guide book
-51. 海报 poster
-52. 会议 meeting
-53. 某天
+50. 入门书 guide book（**1次**）
+51. 海报 poster（**1次**）
+52. 会议 meeting（**1次**）
+53. 某天（**1次**）
