--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -2,6 +2,64 @@
 
 ## さんじゅうに
 
+## さんじゅうさん
+
+1. 禁止入内
+2. 不行（A2）
+3. 已经、不再（与否定形一起使用）（AD）
+4. 还有 ~ （AD）
+5. 放弃、死心（V2）
+6. 标记 mark
+7. 怎样的 ~ 、什么样的 ~
+8. 什么意思。
+9. 转达、转告（V2）
+10. 违章停车
+11. 罚款
+12. 逃走（V2）
+13. 规则
+14. 交通规则。
+15. 遵守（V1）
+16. 吵闹（V1）
+17. 入口
+18. 再利用（V3）recycle
+19. 大体 ~、大约 ~
+20. 截止、截止日期
+21. 回来（V1）
+22. 球 ball
+23. 扔、投（V2）
+24. 出口
+25. 预定的席位
+26. 紧急出口
+27. 注意（V3）
+28. 小心汽车。
+29. 慢行
+30. 禁止使用
+31. 免费
+32. 使用中
+33. 募集中
+34. 危险
+35. 出席（V3）
+36. 出席会议。
+37. 警察
+38. 开始（V1）
+39. 典礼开始。
+40. 折扣
+41. 饮料自助
+42. 一样（A2）
+43. 招聘
+44. 座位、席位
+45. 离开（V1）
+46. 离开座位。
+47. 地震
+48. 发生（V2）
+49. 互助（V1）
+50. 原本、原来（AD）
+51. 悲伤（A1）
+52. 更加（AD）
+53. 寒暄、问候
+54. 对方
+55. 心情、情绪
+
 ## さんじゅうよん
 
 1. 刷（V1）
