--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -1,5 +1,45 @@
 ## さんじゅういち
 
+1. 温泉
+2. 继续（V2）
+3. 继续练柔道。
+4. 研究生院
+5. 参加（V2）
+6. 参加考试。
+7. 总公司、本公司
+8. 留下、剩下（V1）
+9. 留在东京。
+10. 入学考试
+11. 每个月、每月
+12. 休息（V3）
+13. 找到、找出（V2）
+14. 找到工作。
+15. 一直（AD）
+16. 分公司、分店
+17. 动物园
+18. 教会
+19. 连休、长假
+20. 申请（V1）
+21. 作文
+22. 展览会
+23. 别人的孩子
+24. 婚礼
+25. 葬礼
+26. 取得（V1）
+27. 取得假期
+28. 希望号
+29. 发表、公布
+30. 村庄
+31. 毕业（V3）
+32. 电影院
+33. 讨厌（A2）
+34. 天空
+35. 闭上、关上（V2）
+36. 闭上眼睛。
+37. 都会、城市
+38. 孩子们
+39. 自由地、随意地
+
 ## さんじゅうに
 
 ## さんじゅうさん
