--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -42,6 +42,68 @@
 
 ## さんじゅうに
 
+1. 运动（V3）
+2. 欧洲 Europe
+3. 充分(A2)
+4. 大夫、医生
+5. 流感 influenza
+6. 持续 (V1)
+7. 持续发烧。
+8. 发动机 engine
+9. 奇怪、可疑 (A1)
+10. 精神、 健康
+11. 胃
+12. 紧张、疲劳 stress
+13. 勉强 (V3)
+14. 今夜
+15. 星星
+16. 晚（AD）
+17. 咳嗽
+18. 烫伤、烧伤
+19. 使 ~ 凉下来 (V1)
+20. 受伤
+21. 得感冒。
+22. 黄昏、傍晚
+23. 停了(V1)
+24. 雨停了。
+25. 太阳
+26. 晴(V2)
+27. 阴(V1)
+28. 风
+29. 空、畅通(V1)
+30. 道路畅通。
+31. 西
+32. 天空
+33. 参加(V2)
+34. 参加比赛。
+35. 南
+36. 北
+37. 吵闹(A1)
+38. 拥挤(V1)
+39. 道路拥挤。
+40. 自来水
+41. 合格(V3)
+42. 考试合格。
+43. 团队 team
+44. 国际
+45. 成功(V3)
+46. 失败(V3)
+47. 考试失败。
+48. 从很前以前
+49. 占星术
+50. 金牛座
+51. 超量工作
+52. 为难(V1)
+53. 彩票
+54. 中(V1)
+55. 中彩票。
+56. 健康
+57. 东
+58. 恋爱
+59. 恋人
+60. 石头
+61. 占卜
+
 ## さんじゅうさん
 
 1. 禁止入内
