--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -1,36 +1,36 @@
 ## さんじゅういち
 
 1. 温泉
-2. 继续（V2）
+2. 继续（V2）（**1次**）
 3. 继续练柔道。
 4. 研究生院
-5. 参加（V2）
-6. 参加考试。
+5. 参加（V2）（**1次**）
+6. 参加考试。（**1次**）
 7. 总公司、本公司
 8. 留下、剩下（V1）
 9. 留在东京。
 10. 入学考试
 11. 每个月、每月
-12. 休息（V3）
+12. 休息（V3）（**1次**）
 13. 找到、找出（V2）
 14. 找到工作。
-15. 一直（AD）
-16. 分公司、分店
-17. 动物园
+15. 一直（AD）（**1次**）
+16. 分公司、分店（**1次**）
+17. 动物园（**1次**）
 18. 教会
 19. 连休、长假
-20. 申请（V1）
+20. 申请（V1）（**1次**）
 21. 作文
-22. 展览会
+22. 展览会（**1次**）
 23. 别人的孩子
 24. 婚礼
-25. 葬礼
+25. 葬礼（**1次**）
 26. 取得（V1）
 27. 取得假期
-28. 希望号
-29. 发表、公布
+28. 希望号（**1次**）
+29. 发表、公布（**1次**）
 30. 村庄
-31. 毕业（V3）
+31. 毕业（V3）（**1次**）
 32. 电影院
 33. 讨厌（A2）
 34. 天空
