--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -46,26 +46,26 @@
 2. 欧洲 Europe
 3. 充分(A2)
 4. 大夫、医生
-5. 流感 influenza
+5. 流感 influenza（**1次**）
 6. 持续 (V1)
-7. 持续发烧。
-8. 发动机 engine
+7. 持续发烧。（**1次**）
+8. 发动机 engine（**1次**）
 9. 奇怪、可疑 (A1)
 10. 精神、 健康
 11. 胃
-12. 紧张、疲劳 stress
+12. 紧张、疲劳 stress（**1次**）
 13. 勉强 (V3)
 14. 今夜
 15. 星星
 16. 晚（AD）
-17. 咳嗽
-18. 烫伤、烧伤
-19. 使 ~ 凉下来 (V1)
+17. 咳嗽（**1次**）
+18. 烫伤、烧伤（**1次**）
+19. 使 ~ 凉下来 (V1)（**1次**）
 20. 受伤
 21. 得感冒。
 22. 黄昏、傍晚
-23. 停了(V1)
-24. 雨停了。
+23. 停了(V1)（**1次**）
+24. 雨停了。（**1次**）
 25. 太阳
 26. 晴(V2)
 27. 阴(V1)
@@ -75,34 +75,34 @@
 31. 西
 32. 天空
 33. 参加(V2)
-34. 参加比赛。
+34. 参加比赛。（**1次**）
 35. 南
-36. 北
-37. 吵闹(A1)
+36. 北（**1次**）
+37. 吵闹(A1)（**1次**）
 38. 拥挤(V1)
 39. 道路拥挤。
 40. 自来水
-41. 合格(V3)
+41. 合格(V3)（**1次**）
 42. 考试合格。
-43. 团队 team
-44. 国际
-45. 成功(V3)
+43. 团队 team（**1次**）
+44. 国际（**1次**）
+45. 成功(V3)（**1次**）
 46. 失败(V3)
 47. 考试失败。
 48. 从很前以前
-49. 占星术
+49. 占星术（**1次**）
 50. 金牛座
 51. 超量工作
 52. 为难(V1)
-53. 彩票
-54. 中(V1)
-55. 中彩票。
+53. 彩票（**1次**）
+54. 中(V1)（**1次**）
+55. 中彩票。（**1次**）
 56. 健康
 57. 东
 58. 恋爱
 59. 恋人
-60. 石头
-61. 占卜
+60. 石头（**1次**）
+61. 占卜（**1次**）
 
 ## さんじゅうさん
 
