--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -109,57 +109,57 @@
 1. 禁止入内
 2. 不行（A2）
 3. 已经、不再（与否定形一起使用）（AD）
-4. 还有 ~ （AD）
+4. 还有 ~ （AD）（**1次**）
 5. 放弃、死心（V2）
-6. 标记 mark
+6. 标记 mark（**1次**）
 7. 怎样的 ~ 、什么样的 ~
 8. 什么意思。
-9. 转达、转告（V2）
-10. 违章停车
-11. 罚款
+9. 转达、转告（V2）（**1次**）
+10. 违章停车（**1次**）
+11. 罚款（**1次**）
 12. 逃走（V2）
 13. 规则
 14. 交通规则。
 15. 遵守（V1）
-16. 吵闹（V1）
+16. 吵闹（V1）（**1次**）
 17. 入口
-18. 再利用（V3）recycle
-19. 大体 ~、大约 ~
-20. 截止、截止日期
+18. 再利用（V3）recycle（**1次**）
+19. 大体 ~、大约 ~（**1次**）
+20. 截止、截止日期（**1次**）
 21. 回来（V1）
 22. 球 ball
 23. 扔、投（V2）
 24. 出口
-25. 预定的席位
-26. 紧急出口
+25. 预定的席位（**1次**）
+26. 紧急出口（**1次**）
 27. 注意（V3）
 28. 小心汽车。
 29. 慢行
 30. 禁止使用
 31. 免费
 32. 使用中
-33. 募集中
+33. 募集中（**1次**）
 34. 危险
 35. 出席（V3）
 36. 出席会议。
 37. 警察
-38. 开始（V1）
-39. 典礼开始。
+38. 开始（V1）（**1次**）
+39. 典礼开始。（**1次**）
 40. 折扣
 41. 饮料自助
 42. 一样（A2）
-43. 招聘
+43. 招聘（**1次**）
 44. 座位、席位
 45. 离开（V1）
-46. 离开座位。
+46. 离开座位。（**1次**）
 47. 地震
-48. 发生（V2）
-49. 互助（V1）
-50. 原本、原来（AD）
+48. 发生（V2）（**1次**）
+49. 互助（V1）（**1次**）
+50. 原本、原来（AD）（**1次**）
 51. 悲伤（A1）
-52. 更加（AD）
+52. 更加（AD）（**1次**）
 53. 寒暄、问候
-54. 对方
+54. 对方（**1次**）
 55. 心情、情绪
 
 ## さんじゅうよん
@@ -221,3 +221,69 @@
 55. 煮熟（V2）
 56. 流逝、过去（V1）
 57. 大碗
+
+## さんじゅうなな
+
+1. 批评（V1）
+2. 踩（V1）
+3. 踩到脚。
+4. 提醒、警告（V3）
+5. 有谁 ~
+6. 发现（V3）
+7. 发现星星。
+8. 麦子
+9. 大米
+10. 原料
+11. 哪种语言
+12. 葡萄牙 Portugal
+13. 各位（尊敬）
+14. \- 世纪
+15. 起火（V2）
+16. 那之后、后来
+17. 世界遗产
+18. ~ 之一
+19. 金色
+20. 真货
+21. 金子
+22. 公斤、公里
+23. 美丽、好看（A1）
+24. 表扬（V2）
+25. 请求、委托（V1）
+26. 举行、举办（V1）
+27. 举办国际会议。
+28. 弄坏（V1）
+29. 出口（V3）
+30. 全 ~ 、整个 ~
+31. 全世界
+32. 招待（V3）
+33. 警官
+34. 小偷
+35. 弄脏（V1）
+36. 污染大海。
+<!-- 37. 东大寺 -->
+37. 大佛
+38. 发明
+39. 方便面
+<!-- 奥运会 -->
+<!-- 世界杯 -->
+40. 江户时代
+41. 俄罗斯 Rossiya
+42. 笔译（V3）
+<!-- 43. 沙特阿拉伯 -->
+43. 石油
+44. 进口（V3）
+45. 劝诱、邀请（V1）
+46. 约会 date
+47. 偷、抢（V1）
+48. 东照宫
+49. 睡猫
+50. 豪华（A2）
+51. 雕刻
+52. 传说
+53. 雕刻（V1）
+54. 朋友、伙伴
+55. 但是
+56. 但之后
+57. 努力、拼命（AD）
+58. 老鼠
+59. 一直也没有。
