--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -11,7 +11,7 @@
 9. 留在东京。
 10. 入学考试
 11. 每个月、每月
-12. 休息（V3）（**1\0次**）
+12. 休息（V3）（**0次**）
 13. 找到、找出（V2）
 14. 找到工作。
 15. 一直（AD）（**0次**）
@@ -164,7 +164,7 @@
 
 ## さんじゅうよん
 
-1. 刷（V1）
+1. 刷（V1）（**1次**）
 2. 刷牙。
 3. 组装（V2）
 4. 说明书
@@ -173,54 +173,54 @@
 7. 白色
 8. 红色
 9. 蓝色
-10. 深蓝色
-11. 黄色
+10. 深蓝色（**1次**）
+11. 黄色（**1次**）
 12. 棕色
-13. 沙司、辣椒酱 sauce
+13. 沙司、辣椒酱 sauce（**1次**）
 14. 蘸（V1）
 15. 蘸酱油。
 16. 茶道
-17. 泡茶（V2）
-18. 先、首先（AD）
+17. 泡茶（V2）（**1次**）
+18. 先、首先（AD）（**1次**）
 19. 载、放（V2）
-20. 这样可以吗？
-21. 怎么样？
-22. 苦（A1）
-23. 刚才（AD）
+20. 这样可以吗？（**1次**）
+21. 怎么样？（**1次**）
+22. 苦（A1）（**1次**）
+23. 刚才（AD）（**1次**）
 24. 折弯、折断（V1）
 25. 折断树枝。
 26. 图
 27. 线
 28. 箭头
-29. 城
+29. 城（**1次**）
 30. 提问（V3）
 31. 向老师提问。
-32. 找到（V1）
+32. 找到（V1）（**1次**）
 33. 找到钥匙。
 34. 发觉、发现
-35. 发现忘了东西。
+35. 发现忘了东西。（**1次**）
 36. 打（伞）（V1）
 37. 打伞。
-38. 昨晚、夕
+38. 昨晚、夕（**1次**）
 39. 顾客
-40. 肌肉鸡蛋盖浇饭、亲子dong
-41. 材料
-42. ~ 份
-43. \- 克
-44. \- 个
-45. 洋葱
-46. 四分之一
-47. 调味料
+40. 肌肉鸡蛋盖浇饭、亲子dong（**1次**）
+41. 材料（**1次**）
+42. ~ 份（**1次**）
+43. \- 克（**1次**）
+44. \- 个（**1次**）
+45. 洋葱（**1次**）
+46. 四分之一（**1次**）
+47. 调味料（**1次**）
 48. 酱油
-49. 适当（A2）
-50. 大小
+49. 适当（A2）（**1次**）
+50. 大小（**1次**）
 51. 锅
 52. 火
-53. 放在火上
+53. 放在火上（**1次**）
 54. 煮、炖(V2)
 55. 煮熟（V2）
-56. 流逝、过去（V1）
-57. 大碗
+56. 流逝、过去（V1）（**1次**）
+57. 大碗（**1次**）
 
 ## さんじゅうなな
 
