--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -222,6 +222,105 @@
 56. 流逝、过去（V1）（**1次**）
 57. 大碗（**1次**）
 
+## さんじゅうご
+
+1. 开（花）（V1）
+2. 开花。
+3. 对面
+4. 岛
+5. 到此结束吧。
+6. 箱根
+7. 日光
+8. 那样的话
+9. 旅行社
+10. 更多（AD）
+11. 详细（A1）
+12. 滑雪场 ski场
+13. 登山
+14. 过去、以前
+15. 叶子
+16. 变（V1）
+17. 变色。
+18. 机会
+19. 非洲 Africa
+20. 窗帘 curtain
+21. 绳子
+22. 杆、操纵杆 lever
+23. 治好（V1）
+24. 病治好了。
+25. 故障修好了。
+26. 海外
+27. 为难、困惑（V1）
+28. 正确（A1）
+29. 圆圈
+30. 画（V2）
+31. 画圈。
+32. 许可、批准
+33. 屋顶上
+34. 港口
+35. 邻居、附近
+36. 电饭锅
+37. 输入（V3）
+38. 点击 click（V3）
+39. 表示汉字读音的注音假名
+40. 历史
+41. 设备
+42. 发廊 hair salon
+43. 朱红色、红色
+44. 交际（V1）
+45. 谚语
+46. 关系
+47. 搞好关系（V3）
+48. 必要（A2）
+
+## さんじゅうろく
+
+1. 终于（AD）
+2. 习惯（V2）
+3. 习惯工作。
+4. 开始
+5. 肖邦 Chopin
+6. 曲子
+7. 尽可能（AD）
+8. 绝对地（AD）
+9. 绝对没错。
+10. 顾客
+11. 特别（A2）
+12. 正在做 ~
+13. 游泳
+14. 不同（V1）
+15. 挑战（V3） challenge
+16. 心情
+17. 上下班高峰期 rush
+18. 遇到（V1）
+19. 遭到事故。
+20. 相当（AD）
+21. 必定（AD）
+22. 存钱（V3）
+23. 腐烂（V1）
+24. 食物腐烂。
+25. 几乎、几乎完全（否定句）
+26. 最近
+27. 宇宙
+28. 过（V2）
+29. 七点多。
+30. 熟练（AD）
+31. 剑道
+32. 柔道
+33. 每周
+34. 每月
+35. 每年
+36. 交通工具
+37. 世纪
+38. 远处
+39. 珍奇、罕见（A1）
+40. 火车
+41. 汽船
+42. 很多的~（人）
+43. 运送（V1）
+44. 利用（V3）
+45. 自由地、随意地
+
 ## さんじゅうなな
 
 1. 批评（V1）
