--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -230,7 +230,7 @@
 4. 岛
 5. 到此结束吧。
 6. 箱根
-7. 日光
+7. 日光（**1次**）
 8. 那样的话
 9. 旅行社
 10. 更多（AD）
@@ -239,71 +239,71 @@
 13. 登山
 14. 过去、以前
 15. 叶子
-16. 变（V1）
+16. 变（V1）（**1次**）
 17. 变色。
 18. 机会
 19. 非洲 Africa
-20. 窗帘 curtain
+20. 窗帘 curtain（**1次**）
 21. 绳子
-22. 杆、操纵杆 lever
+22. 杆、操纵杆 lever（**1次**）
 23. 治好（V1）
-24. 病治好了。
-25. 故障修好了。
+24. 病治好了。（**1次**）
+25. 故障修好了。（**1次**）
 26. 海外
 27. 为难、困惑（V1）
 28. 正确（A1）
 29. 圆圈
-30. 画（V2）
+30. 画（V2）（**1次**）
 31. 画圈。
-32. 许可、批准
-33. 屋顶上
-34. 港口
-35. 邻居、附近
-36. 电饭锅
-37. 输入（V3）
+32. 许可、批准（**1次**）
+33. 屋顶上（**1次**）
+34. 港口（**1次**）
+35. 邻居、附近（**1次**）
+36. 电饭锅（**1次**）
+37. 输入（V3）（**1次**）
 38. 点击 click（V3）
 39. 表示汉字读音的注音假名
-40. 历史
-41. 设备
-42. 发廊 hair salon
+40. 历史（**1次**）
+41. 设备（**1次**）
+42. 发廊 hair salon（**1次**）
 43. 朱红色、红色
-44. 交际（V1）
-45. 谚语
-46. 关系
-47. 搞好关系（V3）
+44. 交际（V1）（**1次**）
+45. 谚语（**1次**）
+46. 关系（**1次**）
+47. 搞好关系（V3）（**1次**）
 48. 必要（A2）
 
 ## さんじゅうろく
 
-1. 终于（AD）
-2. 习惯（V2）
-3. 习惯工作。
-4. 开始
+1. 终于（AD）（**1次**）
+2. 习惯（V2）（**1次**）
+3. 习惯工作。（**1次**）
+4. 开始（**1次**）
 5. 肖邦 Chopin
 6. 曲子
 7. 尽可能（AD）
 8. 绝对地（AD）
-9. 绝对没错。
-10. 顾客
+9. 绝对没错。（**1次**）
+10. 顾客（礼貌）（**1次**）
 11. 特别（A2）
-12. 正在做 ~
+12. 正在做 ~（补助）
 13. 游泳
-14. 不同（V1）
-15. 挑战（V3） challenge
+14. 不同（V1）（**1次**）
+15. 挑战（V3） challenge（**1次**）
 16. 心情
-17. 上下班高峰期 rush
+17. 上下班高峰期 rush（**1次**）
 18. 遇到（V1）
-19. 遭到事故。
-20. 相当（AD）
-21. 必定（AD）
-22. 存钱（V3）
-23. 腐烂（V1）
+19. 遭到事故。（**1次**）
+20. 相当（AD）（**1次**）
+21. 必定（AD）（**1次**）
+22. 存钱（V3）（**1次**）
+23. 腐烂（V1）（**1次**）
 24. 食物腐烂。
-25. 几乎、几乎完全（否定句）
-26. 最近
-27. 宇宙
+25. 几乎、几乎完全（否定句）（**1次**）
+26. 最近（**1次**）
+27. 宇宙（**1次**）
 28. 过（V2）
-29. 七点多。
+29. 七点多。（**1次**）
 30. 熟练（AD）
 31. 剑道
 32. 柔道
@@ -311,14 +311,14 @@
 34. 每月
 35. 每年
 36. 交通工具
-37. 世纪
+37. 世纪（**1次**）
 38. 远处
 39. 珍奇、罕见（A1）
 40. 火车
 41. 汽船
-42. 很多的~（人）
-43. 运送（V1）
-44. 利用（V3）
+42. 很多的~（人）（**1次**）
+43. 运送（V1）（**1次**）
+44. 利用（V3）（**1次**）
 45. 自由地、随意地
 
 ## さんじゅうなな
