--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -325,65 +325,178 @@
 
 1. 批评（V1）
 2. 踩（V1）
-3. 踩到脚。
+3. 踩到脚。（**1次**）
 4. 提醒、警告（V3）
 5. 有谁 ~
 6. 发现（V3）
 7. 发现星星。
 8. 麦子
-9. 大米
-10. 原料
-11. 哪种语言
-12. 葡萄牙 Portugal
+9. 大米（**1次**）
+10. 原料（**1次**）
+11. 哪种语言（**1次**）
+12. 葡萄牙 Portugal（**1次**）
 13. 各位（尊敬）
 14. \- 世纪
-15. 起火（V2）
+15. 起火（V2）（**1次**）
 16. 那之后、后来
 17. 世界遗产
-18. ~ 之一
+18. ~ 之一（**1次**）
 19. 金色
 20. 真货
 21. 金子
-22. 公斤、公里
+22. 公斤、公里（**1次**）
 23. 美丽、好看（A1）
-24. 表扬（V2）
+24. 表扬（V2）（**1次**）
 25. 请求、委托（V1）
-26. 举行、举办（V1）
+26. 举行、举办（V1）（**1次**）
 27. 举办国际会议。
 28. 弄坏（V1）
-29. 出口（V3）
-30. 全 ~ 、整个 ~
-31. 全世界
-32. 招待（V3）
-33. 警官
+29. 出口（V3）（**1次**）
+30. 全 ~ 、整个 ~（**1次**）
+31. 全世界（**1次**）
+32. 招待（V3）（**1次**）
+33. 警官（**1次**）
 34. 小偷
-35. 弄脏（V1）
+35. 弄脏（V1）（**1次**）
 36. 污染大海。
 <!-- 37. 东大寺 -->
-37. 大佛
+37. 大佛（**1次**）
 38. 发明
-39. 方便面
+39. 方便面（**1次**）
 <!-- 奥运会 -->
 <!-- 世界杯 -->
 40. 江户时代
 41. 俄罗斯 Rossiya
-42. 笔译（V3）
+42. 笔译（V3）（**1次**）
 <!-- 43. 沙特阿拉伯 -->
-43. 石油
+43. 石油（**1次**）
 44. 进口（V3）
 45. 劝诱、邀请（V1）
 46. 约会 date
 47. 偷、抢（V1）
-48. 东照宫
-49. 睡猫
-50. 豪华（A2）
-51. 雕刻
-52. 传说
+48. 东照宫（**1次**）
+49. 睡猫（**1次**）
+50. 豪华（A2）（**1次**）
+51. 雕刻（**1次**）
+52. 传说（**1次**）
 53. 睡眠 (V1)
-54. 雕刻（V1）
-55. 朋友、伙伴
+54. 雕刻（V1）（**1次**）
+55. 朋友、伙伴（**1次**）
 56. 但是
-57. 但之后
-58. 努力、拼命（AD）
-59. 老鼠
-60. 一直也没有。
+57. 但之后（**1次**）
+58. 努力、拼命（AD）（**1次**）
+59. 老鼠（**1次**）
+60. 一直也没有。（**1次**）
+
+## さんじゅうはち
+
+1. 参加（V3）
+2. 参加旅行。
+3. 培育、养（V2）
+4. 搬运（V1）
+5. 婴儿
+6. 小学
+7. 初中
+8. 传阅（文件等）
+9. 研究室
+10. 整理、干净（AD）
+11. 整理（V3）
+12. 叫 ~，名为 ~
+13. \- 本、册
+14. 方法
+15. 章、盖章
+16. 盖（V1）
+17. 盖章。
+18. 出院（V3）
+19. 大的
+20. 小的
+21. 村
+22. 健康
+23. 习惯
+24. 海岸
+25. 说（谎）
+26. 说谎。
+27. 住院（V3）
+28. 假名
+29. 戒指
+30. 出云大社
+31. 前年
+32. 上锁（V2）
+33. 上锁。
+34. 电源
+35. 切断（V1）
+36. 切断电源。
+37. 打开（V2）
+38. 打开电源。
+39. 原爆
+40. 工厂
+41. 双胞胎
+42. 姐妹
+43. 五年级学生
+44. 相似（V1）
+45. 性格
+46. 老实（A1）
+47. 温柔、亲切（A1）
+48. 照顾（V3）
+49. 时间流逝（V1）
+50. 非常喜欢（A2）
+51. 好强、刚强
+52. 吵架、打架
+53. 不可思议（A2）
+54. 年龄
+55. 方法
+
+## さんじゅうきゅう
+
+1. 吃惊（V3）
+2. 地震
+3. 倒下来（V2）
+4. 大厦倒塌。
+5. 相亲
+6. 失望（V3）
+7. 远足 hiking
+8. 复杂（A2）
+9. 辛苦了。
+10. 碍事（A2）
+11. 中途、途中
+12. 卡车 truck
+13. 撞、碰（V1）
+14. 安心、放心（V3）
+15. 很多（AD）
+16. 死（V1）
+17. 海啸
+18. 高兴（A1）
+19. 悲伤（A1）
+20. 害羞（A1）
+21. 硬（A1）
+22. 软（A1）
+23. 回答（V2）
+24. 回答问题。
+25. 路过（V1）
+26. 过路。
+27. 火灾
+28. 胖（V1）
+29. 瘦（V2）
+30. 吵架、打架
+31. ~ 费
+32. 电费
+33. 脏（A1）
+34. 操作
+35. 台风
+36. 雷
+37. 会场
+38. 首相
+39. 离婚（V3）
+40. 前台 front
+41. ~ 号房间
+42. 去拜访（V1）
+43. 毛巾 towel
+44. 肥皂
+45. 大人
+46. 西化服装
+47. 西化（V3）
+48. 合适（V1）
+49. 现在（连语）
+50. 成人仪式
+51. 传统的（A2）
+
