--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -500,3 +500,64 @@
 50. 成人仪式
 51. 传统的（A2）
 
+##　よんじゅう
+
+1. ~ 航班
+2. 到达（V3）
+3. 出发（V3）
+4. 二次会
+5. 醉（V1）
+6. 高度
+7. 长度
+8. 测量（V1）
+9. 忘年会
+10. 新年会
+11. 错误
+12. 长崎
+13. 怎么样？どうですか 的礼貌语
+14. 测试 test
+15. 成绩
+16. 可是（转换话题用）
+17. 来 来ます 的礼貌语
+18. 样子
+19. 出考题。
+20. 确认（V2）
+21. 伤、损失
+22. 表面、正面
+23. 反面、里面
+24. 商量（V3）
+25. 数（V2）
+26. ~ 根 ~ 条
+27. ~ 个
+28. ~ 杯
+29. ~ 厘米 centi（法）
+30. ~ 毫米 milli（法）
+31. ~ 克 gram
+32. 进展顺利（V1）
+33. 必要（A2）
+34. 天气预报
+35. 重量
+36. 大小
+37. ~ 以下
+38. ~ 以上
+39. 裤子 jupon（法）
+40. 合适（V1）
+41. 尺码合适。
+42. 发表会
+43. 老人
+44. 比赛 contest
+45. 马拉松 marathon
+46. 大会
+47. 仙台
+48. 七夕
+49. 事件
+50. 摩托车 auto+bicycle
+51. 炸弹
+52. 堆积（V1）
+53. 司机
+54. 离开一段距离的~（V2）
+55. 突然（AD）
+56. 发动（V1）
+57. 犯人
+58. 到手（V2）
+59. 现在仍然
