--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -392,16 +392,16 @@
 
 1. 参加（V3）
 2. 参加旅行。
-3. 培育、养（V2）
+3. 培育、养（V2）（**0次**）
 4. 搬运（V1）
 5. 婴儿
 6. 小学
 7. 初中
-8. 传阅（文件等）
+8. 传阅（文件等）（**1次**）
 9. 研究室
 10. 整理、干净（AD）
 11. 整理（V3）
-12. 叫 ~，名为 ~
+12. 叫 ~，名为 ~（**1次**）
 13. \- 本、册
 14. 方法
 15. 章、盖章
@@ -412,14 +412,14 @@
 20. 小的
 21. 村
 22. 健康
-23. 习惯
+23. 习惯（**1次**）
 24. 海岸
 25. 说（谎）
 26. 说谎。
 27. 住院（V3）
 28. 假名
 29. 戒指
-30. 出云大社
+30. 出云大社（**1次**）
 31. 前年
 32. 上锁（V2）
 33. 上锁。
@@ -430,12 +430,12 @@
 38. 打开电源。
 39. 原爆
 40. 工厂
-41. 双胞胎
-42. 姐妹
-43. 五年级学生
+41. 双胞胎（**1次**）
+42. 姐妹（**1次**）
+43. 五年级学生（**1次**）
 44. 相似（V1）
 45. 性格
-46. 老实（A1）
+46. 老实（A1）（**1次**）
 47. 温柔、亲切（A1）
 48. 照顾（V3）
 49. 时间流逝（V1）
@@ -443,7 +443,7 @@
 51. 好强、刚强
 52. 吵架、打架
 53. 不可思议（A2）
-54. 年龄
+54. 年龄（**1次**）
 55. 方法
 
 ## さんじゅうきゅう
