--- a/動詞活用.md
+++ b/動詞活用.md
@@ -24,7 +24,7 @@
 
 > 14 - 16 课
 
-动词，原型变法
+动词，原形变法
 
 1. 一类动词
 
@@ -107,7 +107,7 @@
 > 18 课
 
 
-### 相关文型
+### 相关文形
 
 1. 名词/[辞書形]こと が　できます。
    1. ミラさんは日本語ができます。
@@ -130,13 +130,13 @@
 
 1. 活用方法同[て形](#一-て形)
 
-### 相关文型
+### 相关文形
 
 1. [た]形ことがあります
 2. 动词1[た]形り、 动词2[た]形り　**します**。
    1. 表示列举，动作没有先后关系
 
-## 五 [普通型]、简体形
+## 五 [普通形]、简体形
 
 > 20 课
 
@@ -160,14 +160,14 @@
 - が　→ けど
 - ません　→ ない
 
-### 相关文型
+### 相关文形
 
-1. [普通型] と　思います
-2. [普通型]　と　言います
-3. [普通型]　でしょう？
-   1. [普通型] V 和 イ，正常普通型
-   2. [普通型] ナ 和 N，不加 だ
-4. [普通型]修饰名词。
+1. [普通形] と　思います
+2. [普通形]　と　言います
+3. [普通形]　でしょう？
+   1. [普通形] V 和 イ，正常普通形
+   2. [普通形] ナ 和 N，不加 だ
+4. [普通形]修饰名词。
 5. とき。同简体形修饰名词，但是没有过去否定的形式。
    1. V [辞書形]
    2. V ない
@@ -177,8 +177,61 @@
    4. い 形容词
    5. な 形容词 ＋ な
    6. 名词 の
-6. [普通型]过去ら、主句
+6. [普通形]过去ら、主句
    1. V 肯定，[た]形
    2. V 否定，なかったら
    3. イ，かったら
    4. ナ｜N，だったら
+
+## 六 [可能形]
+
+> 27 课
+
+1. 一类动词 う段 变 え段。「かえます」
+2. 二类动词 られる。「食べられます」
+3. 三类动词 できる　こられる
+
+## 七 [意向形]
+
+> 31 课
+
+1. 一类动词 う段 变 お段＋う。「休もう」
+2. 二类动词 よう。「食べよう」
+3. 三类动词 しよう　こよう
+
+1. 意向形作为「ましょう」的普通形，用在简体句中
+2. 意向形　と　思っています。
+
+## 八 [命令形]
+
+> 33 课
+
+1. 一类动词 え段 变 え段。「がんばれ」
+2. 二类动词 ろ。「食べろ」
+   1. 例外 くれます　→ くれ
+3. 三类动词 しろ　こい
+
+## 九 [禁止形]
+
+> 33 课
+
+1. 字典形加「な」。「負けるな」
+
+## 十 [假定形] ば形
+
+> 35 课
+
+1. 一类动词 う段 变 え段＋ば。「押せば」
+2. 二类动词 れば。「食べれば」
+3. 三类动词 すれば　くれば
+4. い形容詞：い　→ ければ。「なければ」
+5. な形容詞：なら。「暇なら」
+6. 名詞：なら。「いい天気なら」
+
+## 十一 [被动形] れ形
+
+> ３７ 课
+
+1. 一类动词 う段 变 あ段＋れ。「行われます」
+2. 二类动词 られる。「食べられます」
+3. 三类动词 される　こられる。
