--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -452,53 +452,53 @@
 2. 地震
 3. 倒下来（V2）
 4. 大厦倒塌。
-5. 相亲
+5. 相亲（**1次**）
 6. 失望（V3）
-7. 远足 hiking
-8. 复杂（A2）
-9. 辛苦了。
+7. 远足 hiking（**1次**）
+8. 复杂（A2）（**1次**）
+9. 辛苦了。（**1次**）
 10. 碍事（A2）
-11. 中途、途中
+11. 中途、途中（**1次**）
 12. 卡车 truck
 13. 撞、碰（V1）
 14. 安心、放心（V3）
-15. 很多（AD）
+15. 很多（AD）（**1次**）
 16. 死（V1）
-17. 海啸
+17. 海啸（**1次**）
 18. 高兴（A1）
 19. 悲伤（A1）
-20. 害羞（A1）
+20. 害羞（A1）（**1次**）
 21. 硬（A1）
-22. 软（A1）
+22. 软（A1）（**1次**）
 23. 回答（V2）
 24. 回答问题。
 25. 路过（V1）
 26. 过路。
 27. 火灾
-28. 胖（V1）
+28. 胖（V1）（**1次**）
 29. 瘦（V2）
 30. 吵架、打架
 31. ~ 费
 32. 电费
 33. 脏（A1）
 34. 操作
-35. 台风
+35. 台风（**1次**）
 36. 雷
 37. 会场
 38. 首相
-39. 离婚（V3）
+39. 离婚（V3）（**1次**）
 40. 前台 front
-41. ~ 号房间
+41. ~ 号房间（**1次**）
 42. 去拜访（V1）
-43. 毛巾 towel
-44. 肥皂
+43. 毛巾 towel（**1次**）
+44. 肥皂（**1次**）
 45. 大人
 46. 西化服装
-47. 西化（V3）
+47. 西化（V3）（**1次**）
 48. 合适（V1）
 49. 现在（连语）
 50. 成人仪式
-51. 传统的（A2）
+51. 传统的（A2）（**1次**）
 
 ##　よんじゅう
 
