--- a/言葉/41-50.md
+++ b/言葉/41-50.md
@@ -106,3 +106,86 @@
 43. 市场调查
 44. 分、割、切（V1）
 45. 注入、灌入、倒入（V1）
+
+## よんじゅうさん
+
+1. 马上（AD）
+2. 脱落（V2）
+3. 纽扣脱落。
+4. 轻松（A2）
+5. 掉下来（V2）
+6. 行李掉下来。
+7. 减少（V1）
+8. 出口减少。
+9. 不好吃（A1）
+10. 好吃（A1）
+11. 温柔（A1）
+12. 带子、绳
+13. 断了（V2）
+14. 绳子断了。
+15. 上涨（V1）
+16. 下降（V1）
+17. 价格下降。
+18. 增加（V2）
+19. 出口增加。
+20. 汽油 gasoline
+21. 用光了、丢了（V1）
+22. 汽油用光了。
+23. 没意思（A1）
+24. 奇怪（A2）
+25. 奇怪的味道
+26. 小册子 pamphlet
+27. 蔷薇
+28. 兜风 drive
+29. 理由
+30. 道歉（V1）
+31. 认识（V1）
+32. 幸福（A2）
+
+## よんじゅうよん
+
+1. 苦（V1）
+2. 笑（V1）
+3. 眼泪
+4. 空气
+5. 安全（A2）
+6. 危险（A2）
+7. 请做成像 ~ 的样子。
+8. 您要怎么做？
+9. 剪发 cut
+10. 洗发 shampoo
+11. 给您怎么做（剪）呢？
+12. 短发 short
+13. 这样可以吗？
+14. 您辛苦了。
+15. 发生（V2）
+16. 发生事故。
+17. 厚（A1）
+18. 干了（V1）
+19. 衬衫干了。
+20. 湿了（V2）
+21. 量
+22. 倍
+23. 睡（V1）
+24. (味道)浓 （颜色）淡（A1）
+25. 滑（V1）
+26. 洗的衣服等
+27. (味道)淡 （颜色）浅（A1）
+28. 单人间 single
+29. 双人间 twin
+30. 日餐
+31. 西餐
+32. 小菜
+33. 调节（V3）
+34. 粗（A1）
+35. 细（A1）
+36. 讨厌（V1）
+37. 讨厌扫地。
+38. 还、更
+39. ~ 得好（AD）
+40. 顺序
+41. 安心（A2）
+42. 表现
+43. 例如（AD）
+44. 分别、分离（V2）
+45. 不吉利
