--- a/言葉/31-40.md
+++ b/言葉/31-40.md
@@ -502,62 +502,62 @@
 
 ##　よんじゅう
 
-1. ~ 航班
-2. 到达（V3）
-3. 出发（V3）
-4. 二次会
+1. ~ 航班（**1次**）
+2. 到达（V3）（**1次**）
+3. 出发（V3）（**1次**）
+4. 二次会（**1次**）
 5. 醉（V1）
 6. 高度
 7. 长度
-8. 测量（V1）
-9. 忘年会
+8. 测量（V1）（**1次**）
+9. 忘年会（**1次**）
 10. 新年会
 11. 错误
 12. 长崎
 13. 怎么样？どうですか 的礼貌语
 14. 测试 test
-15. 成绩
-16. 可是（转换话题用）
-17. 来 来ます 的礼貌语
+15. 成绩（**1次**）
+16. 可是（转换话题用）（**1次**）
+17. 来 来ます 的礼貌语（**1次**）
 18. 样子
 19. 出考题。
 20. 确认（V2）
-21. 伤、损失
-22. 表面、正面
-23. 反面、里面
-24. 商量（V3）
-25. 数（V2）
+21. 伤、损失（**1次**）
+22. 表面、正面（**1次**）
+23. 反面、里面（**1次**）
+24. 商量（V3）（**1次**）
+25. 数（V2）（**1次**）
 26. ~ 根 ~ 条
-27. ~ 个
-28. ~ 杯
+27. ~ 个（**1次**）
+28. ~ 杯（**1次**）
 29. ~ 厘米 centi（法）
 30. ~ 毫米 milli（法）
-31. ~ 克 gram
-32. 进展顺利（V1）
+31. ~ 克 gram（**1次**）
+32. 进展顺利（V1）（**1次**）
 33. 必要（A2）
-34. 天气预报
+34. 天气预报（**1次**）
 35. 重量
 36. 大小
 37. ~ 以下
 38. ~ 以上
-39. 裤子 jupon（法）
+39. 裤子 jupon（法）（**1次**）
 40. 合适（V1）
 41. 尺码合适。
-42. 发表会
+42. 发表会（**1次**）
 43. 老人
-44. 比赛 contest
+44. 比赛 contest（**1次**）
 45. 马拉松 marathon
 46. 大会
-47. 仙台
-48. 七夕
+47. 仙台（**1次**）
+48. 七夕（**1次**）
 49. 事件
-50. 摩托车 auto+bicycle
-51. 炸弹
-52. 堆积（V1）
+50. 摩托车 auto+bicycle（**1次**）
+51. 炸弹（**1次**）
+52. 堆积（V1）（**1次**）
 53. 司机
-54. 离开一段距离的~（V2）
-55. 突然（AD）
+54. 离开一段距离的~（V2）（**1次**）
+55. 突然（AD）（**1次**）
 56. 发动（V1）
 57. 犯人
 58. 到手（V2）
-59. 现在仍然
+59. 现在仍然（**1次**）
