--- a/言葉/41-50.md
+++ b/言葉/41-50.md
@@ -109,53 +109,53 @@
 
 ## よんじゅうさん
 
-1. 马上（AD）
-2. 脱落（V2）
-3. 纽扣脱落。
+1. 马上（AD）（**1次**）
+2. 脱落（V2）（**1次**）
+3. 纽扣脱落。（**1次**）
 4. 轻松（A2）
-5. 掉下来（V2）
+5. 掉下来（V2）（**1次**）
 6. 行李掉下来。
 7. 减少（V1）
 8. 出口减少。
 9. 不好吃（A1）
 10. 好吃（A1）
 11. 温柔（A1）
-12. 带子、绳
+12. 带子、绳（**1次**）
 13. 断了（V2）
 14. 绳子断了。
 15. 上涨（V1）
 16. 下降（V1）
 17. 价格下降。
 18. 增加（V2）
-19. 出口增加。
-20. 汽油 gasoline
+19. 出口增加。（**1次**）
+20. 汽油 gasoline（**1次**）
 21. 用光了、丢了（V1）
 22. 汽油用光了。
 23. 没意思（A1）
 24. 奇怪（A2）
-25. 奇怪的味道
-26. 小册子 pamphlet
-27. 蔷薇
-28. 兜风 drive
+25. 奇怪的味道（**1次**）
+26. 小册子 pamphlet（**1次**）
+27. 蔷薇（**1次**）
+28. 兜风 drive（**1次**）
 29. 理由
 30. 道歉（V1）
 31. 认识（V1）
-32. 幸福（A2）
+32. 幸福（A2）（**1次**）
 
 ## よんじゅうよん
 
-1. 苦（V1）
-2. 笑（V1）
-3. 眼泪
+1. 哭（V1）（**1次**）
+2. 笑（V1）（**1次**）
+3. 眼泪（**1次**）
 4. 空气
 5. 安全（A2）
 6. 危险（A2）
-7. 请做成像 ~ 的样子。
-8. 您要怎么做？
-9. 剪发 cut
-10. 洗发 shampoo
-11. 给您怎么做（剪）呢？
-12. 短发 short
+7. 请做成像 ~ 的样子。（**1次**）
+8. 您要怎么做？（**1次**）
+9. 剪发 cut（**1次**）
+10. 洗发 shampoo（**1次**）
+11. 给您怎么做（剪）呢？（**1次**）
+12. 短发 short（**1次**）
 13. 这样可以吗？
 14. 您辛苦了。
 15. 发生（V2）
@@ -167,25 +167,25 @@
 21. 量
 22. 倍
 23. 睡（V1）
-24. (味道)浓 （颜色）淡（A1）
-25. 滑（V1）
+24. (味道)浓 （颜色）深（A1）
+25. 滑（V1）（**1次**）
 26. 洗的衣服等
-27. (味道)淡 （颜色）浅（A1）
-28. 单人间 single
-29. 双人间 twin
+27. (味道)淡 （颜色）浅（A1）（**1次**）
+28. 单人间 single（**1次**）
+29. 双人间 twin（**1次**）
 30. 日餐
 31. 西餐
-32. 小菜
+32. 小菜（**1次**）
 33. 调节（V3）
-34. 粗（A1）
+34. 粗（A1）（**1次**）
 35. 细（A1）
 36. 讨厌（V1）
-37. 讨厌扫地。
+37. 讨厌扫地。（**1次**）
 38. 还、更
 39. ~ 得好（AD）
 40. 顺序
 41. 安心（A2）
-42. 表现
+42. 表现（**1次**）
 43. 例如（AD）
-44. 分别、分离（V2）
-45. 不吉利
+44. 分别、分离（V2）（**1次**）
+45. 不吉利（**1次**）
