--- a/言葉/41-50.md
+++ b/言葉/41-50.md
@@ -189,3 +189,61 @@
 43. 例如（AD）
 44. 分别、分离（V2）（**1次**）
 45. 不吉利（**1次**）
+
+## よんじゅうご
+
+1. 场合、情况
+2. 保证书
+3. 收据
+4. 梅花
+5. 路线 course
+6. 工作人员
+7. 出发 start
+8. 获得冠军（V3）
+9. 分数、点
+10. 通知（V2）
+11. 取消（V3）cancel
+12. 中止
+13. 野营 camp
+14. 到此结束
+15. 突然（AD）
+16. 相信（V2）
+17. 期待着、盼望着
+18. 烦恼
+19. 闹钟
+20. 醒来（V3）
+21. 大学生
+22. 回答
+23. 响（V1）
+24. 铃响了。
+25. 上（闹钟）（V3）set
+26. 尽管如此
+
+## よんじゅうろく
+
+1. 现在可以吗？
+2. 原因
+3. 刚刚（AD）
+4. 那儿
+5. 情况、状态
+6. 实在对不起。
+7. 朝着 ~ 去（V1）
+8. 正好、刚好（AD）
+9. 回来（V3）
+10. 送达（V1）
+11. 烧（V1）
+12. 烤好了（V2）
+13. 半年
+14. 入学（V3）
+15. 大学入学。
+16. 毕业（V3）
+17. 快递
+18. 不再
+19. 交给、递交（V1）
+20. 运气好（V2）
+21. 地板
+22. 摔倒（V1）
+23. 铃 bell
+24. 急忙、匆匆忙忙（V2）
+25. 顺序
+26. 发生的事情
